Added file reading

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 </head>
 <body>
   <h1>Triangle Geometry</h1>
-  <!-- TODO: add graphics -->
+  <input type="file" name="file" id="file">
+  <input type="button" id="button" value="Choose a file...">
+  <p id="output"></p>
 </body>
 </html>
