--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Triangle Geometry</title>
   <link rel="stylesheet" href="style.css">
+  <script src="https://d3js.org/d3.v7.min.js"></script>
   <script src="triangle.js" defer></script>
 </head>
 <body>
   <h1>Triangle Geometry</h1>
   <input type="file" name="file" id="file">
   <input type="button" id="button" value="Choose a file...">
-  <p id="output"></p>
 </body>
 </html>
